[gd_scene load_steps=3 format=3 uid="uid://bwncpsw8lnbla"]

[ext_resource type="Script" uid="uid://dd0oppvdo13cb" path="res://playable_characters/robots/tool_attachments/tool_attachment.gd" id="1_xyxgt"]
[ext_resource type="PackedScene" uid="uid://bkd2fo3ki3km0" path="res://components/connector_component.tscn" id="2_aj2v4"]

[node name="ToolAttachment" type="RigidBody3D"]
script = ExtResource("1_xyxgt")

[node name="ConnectorComponent" parent="." instance=ExtResource("2_aj2v4")]

[node name="CenterOfMass" type="Marker3D" parent="."]
